 2015-04-11 00:59  asfernandes 
   M src/dsql/DdlNodes.epp
Fixed CORE-4744 - ALTER DATABASE SET DEFAULT CHARACTER SET: 1) take effect only for once for current attachment; 2) does not check that new char set exists untill it will be used.

 2015-04-08 15:12  asfernandes 
   M src/lock/print.cpp
Remove duplicate lck enums.

 2015-04-08 15:08  asfernandes 
   M src/remote/inet.cpp
Misc.

 2015-04-08 03:21  asfernandes 
   M doc/WhatsNew
   M src/dsql/DdlNodes.epp
Fixed (again) CORE-2932 - Wrong field position after ALTER POSITION.

 2015-04-07 13:56  alexpeshkoff 
   A extern/cloop/Makefile
Fixed posix build

 2015-04-07 10:29  egorpugin 
   M src/gpre/CMakeLists.txt
   M src/remote/CMakeLists.txt
[build] [cmake] Add more cloop dependencies.

 2015-04-07 10:08  egorpugin 
   M CMakeLists.txt
   M builds/cmake/BuildFunctions.cmake
   M builds/cmake/Configure.cmake
   M examples/CMakeLists.txt
   M src/CMakeLists.txt
Add cloop to CMake build.

 2015-04-07 03:19  asfernandes 
   M builds/posix/Makefile.in
   M builds/posix/make.defaults
Integrate cloop in the posix build.

 2015-04-07 03:19  asfernandes 
   A extern/cloop
   A extern/cloop/.gitignore
   A extern/cloop/cloop.sln
   A extern/cloop/src
   A extern/cloop/src/cloop
   A extern/cloop/src/cloop/Expr.cpp
   A extern/cloop/src/cloop/Expr.h
   A extern/cloop/src/cloop/Generator.cpp
   A extern/cloop/src/cloop/Generator.h
   A extern/cloop/src/cloop/Lexer.cpp
   A extern/cloop/src/cloop/Lexer.h
   A extern/cloop/src/cloop/Main.cpp
   A extern/cloop/src/cloop/Parser.cpp
   A extern/cloop/src/cloop/Parser.h
   A extern/cloop/src/cloop/cloop.vcxproj
   A extern/cloop/src/cloop/cloop.vcxproj.filters
   A extern/cloop/src/tests
   A extern/cloop/src/tests/test1
   A extern/cloop/src/tests/test1/CTest.c
   A extern/cloop/src/tests/test1/CalcCApi.c
   A extern/cloop/src/tests/test1/CalcCApi.h
   A extern/cloop/src/tests/test1/CalcCppApi.h
   A extern/cloop/src/tests/test1/CalcPascalApi.implementation.pas